Updating manifest.json

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Get solutions to the common dev bugs"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/res/official/LogoIcon.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/LogoIcon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Error Sensei</title>
